--- a/filled/lesson1_rulebased_filled.ipynb
+++ b/filled/lesson1_rulebased_filled.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "# Load the data.\n",
-    "tweets, test_tweets = lib.read_data()"
+    "tweets, test_tweets = lib.read_data()\n"
    ]
   },
   {
@@ -66,7 +66,7 @@
     "\n",
     "# To view the category of this tweet, we access tweet.category\n",
     "# (This is called an attribute).\n",
-    "print(tweet.category)"
+    "print(tweet.category)\n"
    ]
   },
   {
@@ -93,11 +93,11 @@
     "hashtags = Counter()\n",
     "\n",
     "for t in tweets:\n",
-    "    for idx,token in enumerate(t):\n",
-    "        if token==\"#\":\n",
-    "            hashtags[t[idx+1]] += 1\n",
+    "    for idx, token in enumerate(t):\n",
+    "        if token == \"#\":\n",
+    "            hashtags[t[idx + 1]] += 1\n",
     "\n",
-    "print(hashtags.most_common(10))"
+    "print(hashtags.most_common(10))\n"
    ]
   },
   {
@@ -15805,12 +15805,12 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# This function prints out a table containing all the tweets, along with their category labels\n",
-    "lib.show_tweets(tweets)"
+    "lib.show_tweets(tweets)\n"
    ]
   },
   {
@@ -15854,14 +15854,14 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "def square_minus_1(x):\n",
-    "    return x*x - 1\n",
+    "    return x * x - 1\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "print(\"Testing:\")\n",
-    "for x in [3,-4,6.5,0]:\n",
+    "for x in [3, -4, 6.5, 0]:\n",
     "    print(str(x) + \" -> \" + str(square_minus_1(x)), end=' ')\n",
-    "    print(\"CORRECT\" if square_minus_1(x)==(x**2-1) else \"INCORRECT\")"
+    "    print(\"CORRECT\" if square_minus_1(x) == (x ** 2 - 1) else \"INCORRECT\")\n"
    ]
   },
   {
@@ -15916,8 +15916,8 @@
     "\n",
     "print(\"Testing:\")\n",
     "for word in [\"computer\", \"science\", \"lesson\"]:\n",
-    "    print(\"%s ->\"%word, contains_ss(word), end=' ')\n",
-    "    print(\"CORRECT\" if contains_ss(word)==(\"ss\" in word) else \"INCORRECT\")"
+    "    print(\"%s ->\" % word, contains_ss(word), end=' ')\n",
+    "    print(\"CORRECT\" if contains_ss(word) == (\"ss\" in word) else \"INCORRECT\")\n"
    ]
   },
   {
@@ -15981,15 +15981,15 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "def grade(score):\n",
-    "    if score>=90:\n",
+    "    if score >= 90:\n",
     "        return \"A\"\n",
-    "    elif score>=80:\n",
+    "    elif score >= 80:\n",
     "        return \"B\"\n",
-    "    elif score>=70:\n",
+    "    elif score >= 70:\n",
     "        return \"C\"\n",
-    "    elif score>=60:\n",
+    "    elif score >= 60:\n",
     "        return \"D\"\n",
-    "    elif score>=50:\n",
+    "    elif score >= 50:\n",
     "        return \"E\"\n",
     "    else:\n",
     "        return \"F\"\n",
@@ -15998,9 +15998,9 @@
     "\n",
     "\n",
     "print(\"Testing:\")\n",
-    "for (score,g) in [(77,\"C\"),(80,\"B\"),(32,\"F\"),(100,\"A\"),(69,\"D\")]:\n",
+    "for (score, g) in [(77, \"C\"), (80, \"B\"), (32, \"F\"), (100, \"A\"), (69, \"D\")]:\n",
     "    print(\"%i -> %s\" % (score, grade(score)), end=' ')\n",
-    "    print(\"CORRECT\" if grade(score)==g else \"INCORRECT\")"
+    "    print(\"CORRECT\" if grade(score) == g else \"INCORRECT\")\n"
    ]
   },
   {
@@ -16026,19 +16026,18 @@
    "outputs": [],
    "source": [
     "def classify_rb(tweet):\n",
-    "    \n",
-    "  tweet_text = str(tweet).lower() # this makes the tweet lower-case, so we don't have to worry about matching case\n",
+    "    tweet_text = str(tweet).lower()  # this makes the tweet lower-case, so we don't have to worry about matching case\n",
     "\n",
-    "  if 'medical' in tweet_text:\n",
-    "    return \"Medical\"\n",
-    "  elif 'energy' in tweet_text:\n",
-    "    return \"Energy\"\n",
-    "  elif 'water' in tweet_text:\n",
-    "    return \"Water\"\n",
-    "  elif 'food' in tweet_text:\n",
-    "    return \"Food\"\n",
-    "  else:\n",
-    "    return \"None\""
+    "    if 'medical' in tweet_text:\n",
+    "        return \"Medical\"\n",
+    "    elif 'energy' in tweet_text:\n",
+    "        return \"Energy\"\n",
+    "    elif 'water' in tweet_text:\n",
+    "        return \"Water\"\n",
+    "    elif 'food' in tweet_text:\n",
+    "        return \"Food\"\n",
+    "    else:\n",
+    "        return \"None\"\n"
    ]
   },
   {
@@ -20014,13 +20013,13 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets] # a list of (tweet, prediction) pairs\n",
+    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets]  # a list of (tweet, prediction) pairs\n",
     "\n",
-    "lib.show_predictions(predictions)"
+    "lib.show_predictions(predictions)\n"
    ]
   },
   {
@@ -20043,19 +20042,18 @@
    "outputs": [],
    "source": [
     "def classify_rb_game(tweet):\n",
-    "    \n",
-    "  tweet_text = str(tweet).lower() # this makes the tweet lower-case, so we don't have to worry about matching case\n",
+    "    tweet_text = str(tweet).lower()  # this makes the tweet lower-case, so we don't have to worry about matching case\n",
     "\n",
-    "  if 'medical' in tweet_text:\n",
-    "    return \"Medical\"\n",
-    "  elif 'energy' in tweet_text:\n",
-    "    return \"Energy\"\n",
-    "  elif 'water' in tweet_text:\n",
-    "    return \"Water\"\n",
-    "  elif 'food' in tweet_text:\n",
-    "    return \"Food\"\n",
-    "  else:\n",
-    "    return \"None\"\n"
+    "    if 'medical' in tweet_text:\n",
+    "        return \"Medical\"\n",
+    "    elif 'energy' in tweet_text:\n",
+    "        return \"Energy\"\n",
+    "    elif 'water' in tweet_text:\n",
+    "        return \"Water\"\n",
+    "    elif 'food' in tweet_text:\n",
+    "        return \"Food\"\n",
+    "    else:\n",
+    "        return \"None\"\n"
    ]
   },
   {
@@ -20087,7 +20085,7 @@
    ],
    "source": [
     "food_tweet = \"\"\n",
-    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(food_tweet))"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(food_tweet))\n"
    ]
   },
   {
@@ -20113,7 +20111,7 @@
    ],
    "source": [
     "energy_tweet = \"\"\n",
-    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(energy_tweet))"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(energy_tweet))\n"
    ]
   },
   {
@@ -20139,7 +20137,7 @@
    ],
    "source": [
     "water_tweet = \"\"\n",
-    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(water_tweet))"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(water_tweet))\n"
    ]
   },
   {
@@ -20165,7 +20163,7 @@
    ],
    "source": [
     "medical_tweet = \"\"\n",
-    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(medical_tweet))"
+    "print(\"This tweet is classified as: %s\\n\" % classify_rb_game(medical_tweet))\n"
    ]
   },
   {
