--- a/filled/lesson2_evaluation_filled.ipynb
+++ b/filled/lesson2_evaluation_filled.ipynb
@@ -7,9 +7,9 @@
    "outputs": [],
    "source": [
     "# Run this every time you open the spreadsheet\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import lib"
+    "% load_ext autoreload\n",
+    "% autoreload 2\n",
+    "import lib\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "source": [
     "# Load the data.\n",
     "# This function returns \"tweets\" and \"test_tweets\", both lists of tweets\n",
-    "tweets, test_tweets = lib.read_data()"
+    "tweets, test_tweets = lib.read_data()\n"
    ]
   },
   {
@@ -41,19 +41,18 @@
    "outputs": [],
    "source": [
     "def classify_rb(tweet):\n",
-    "    \n",
-    "  tweet = str(tweet).lower() # this makes the tweet lower-case, so we don't have to worry about matching case\n",
+    "    tweet = str(tweet).lower()  # this makes the tweet lower-case, so we don't have to worry about matching case\n",
     "\n",
-    "  if \"medicine\" in tweet or \"first aid\" in tweet:\n",
-    "    return \"Medical\"\n",
-    "  elif \"power\" in tweet or \"battery\" in tweet:\n",
-    "    return \"Energy\"\n",
-    "  elif \"water\" in tweet or \"bottled\" in tweet:\n",
-    "    return \"Water\"\n",
-    "  elif \"food\" in tweet or \"perishable\" in tweet or \"canned\" in tweet:\n",
-    "    return \"Food\"\n",
-    "  else:\n",
-    "    return \"None\""
+    "    if \"medicine\" in tweet or \"first aid\" in tweet:\n",
+    "        return \"Medical\"\n",
+    "    elif \"power\" in tweet or \"battery\" in tweet:\n",
+    "        return \"Energy\"\n",
+    "    elif \"water\" in tweet or \"bottled\" in tweet:\n",
+    "        return \"Water\"\n",
+    "    elif \"food\" in tweet or \"perishable\" in tweet or \"canned\" in tweet:\n",
+    "        return \"Food\"\n",
+    "    else:\n",
+    "        return \"None\"\n"
    ]
   },
   {
@@ -97,8 +96,8 @@
    "source": [
     "# Exercise 1(a).\n",
     "# Create a list called \"my_numbers\" that contains the numbers from 0 to 6 (inclusive) and then print it\n",
-    "my_numbers = [0,1,2,3,4,5,6]\n",
-    "print(my_numbers)"
+    "my_numbers = [0, 1, 2, 3, 4, 5, 6]\n",
+    "print(my_numbers)\n"
    ]
   },
   {
@@ -120,7 +119,7 @@
     "# It should match the previous cell.\n",
     "# Hint: look carefully at the range(10) example above.\n",
     "my_numbers = list(range(7))\n",
-    "print(my_numbers)"
+    "print(my_numbers)\n"
    ]
   },
   {
@@ -170,7 +169,7 @@
     "# Write a for-loop that iterates through my_numbers, and prints the square of each number\n",
     "# You should see the following numbers print out, one per line: 0, 1, 4, 9, 16, 25, 36\n",
     "for n in my_numbers:\n",
-    "    print(n*n)"
+    "    print(n * n)\n"
    ]
   },
   {
@@ -196,12 +195,12 @@
     "#### YOUR CODE STARTS HERE ####\n",
     "sum_squares = 0\n",
     "for n in my_numbers:\n",
-    "    sum_squares += n*n\n",
+    "    sum_squares += n * n\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "print(\"Testing: sum_squares = %i\" % sum_squares)\n",
-    "print(\"CORRECT\" if sum_squares==91 else \"INCORRECT\")"
+    "print(\"CORRECT\" if sum_squares == 91 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -252,7 +251,8 @@
     "# Count the number of Weasleys in the list of characters, and save the result to the variable \"num_weasleys\".\n",
     "# Use incrementation with the \"x += 1\" notation.\n",
     "\n",
-    "characters = ['Harry Potter', 'Ron Weasley', 'Albus Dumbledore', 'Ginny Weasley', 'Percy Weasley', 'Hermione Granger', 'Fred Weasley', 'George Weasley']\n",
+    "characters = ['Harry Potter', 'Ron Weasley', 'Albus Dumbledore', 'Ginny Weasley', 'Percy Weasley', 'Hermione Granger',\n",
+    "              'Fred Weasley', 'George Weasley']\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
@@ -264,7 +264,7 @@
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "print(\"Testing: num_weasleys = %i\" % num_weasleys)\n",
-    "print(\"CORRECT\" if num_weasleys==5 else \"INCORRECT\")"
+    "print(\"CORRECT\" if num_weasleys == 5 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -311,18 +311,17 @@
     "\n",
     "my_pets = ['cat', 'lizard', 'cat', 'dog', 'cat', 'snake', 'dog', 'cat', 'dog', 'parrot']\n",
     "\n",
-    "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "num_cats = 0\n",
     "for animal in my_pets:\n",
-    "    if animal=='cat':\n",
+    "    if animal == 'cat':\n",
     "        num_cats += 1\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "print(\"Testing: num_cats = %i\" % num_cats)\n",
-    "print(\"CORRECT\" if num_cats==4 else \"INCORRECT\")"
+    "print(\"CORRECT\" if num_cats == 4 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -348,13 +347,13 @@
     "\n",
     "num_unusual = 0\n",
     "for animal in my_pets:\n",
-    "    if animal!='cat' and animal!=\"dog\":\n",
+    "    if animal != 'cat' and animal != \"dog\":\n",
     "        num_unusual += 1\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "print(\"Testing: num_unusual = %i\" % num_unusual)\n",
-    "print(\"CORRECT\" if num_unusual==3 else \"INCORRECT\")"
+    "print(\"CORRECT\" if num_unusual == 3 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -412,12 +411,12 @@
     "    Returns:\n",
     "        The F1 score.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Initialize variables to count the number of true positives, false positives and false negatives\n",
     "    true_positives = 0.0\n",
     "    false_positives = 0.0\n",
     "    false_negatives = 0.0\n",
-    "    \n",
+    "\n",
     "    # Iterate through the tweets, counting the number of true positives, false positives and false negatives\n",
     "    for (tweet, predicted_category) in predictions:\n",
     "        true_category = tweet.category\n",
@@ -427,7 +426,7 @@
     "            false_negatives += 1\n",
     "        elif true_category != c and predicted_category == c:\n",
     "            false_positives += 1\n",
-    "            \n",
+    "\n",
     "    # Before we calculate Precision, Recall and F1 we need to check whether true_positives = 0. Why?\n",
     "    if true_positives == 0:\n",
     "        precision = 0.0\n",
@@ -437,27 +436,27 @@
     "        # Calculate Precision, Recall and F1\n",
     "        precision = true_positives / (true_positives + false_positives)\n",
     "        recall = true_positives / (true_positives + false_negatives)\n",
-    "        f1 = 2*precision*recall / (precision + recall)\n",
+    "        f1 = 2 * precision * recall / (precision + recall)\n",
     "\n",
     "    # Print the category name, Precision, Recall and F1\n",
     "    print(c)\n",
     "    print(\"Precision: \", precision)\n",
     "    print(\"Recall: \", recall)\n",
     "    print(\"F1: \", f1)\n",
-    "    print(\"\") \n",
+    "    print(\"\")\n",
     "\n",
     "    # Return the F1 score\n",
     "    return f1\n",
     "\n",
     "\n",
-    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets] # Make a list of (tweet, predicted_category) pairs\n",
+    "predictions = [(tweet, classify_rb(tweet)) for tweet in test_tweets]  # Make a list of (tweet, predicted_category) pairs\n",
     "\n",
     "# Get the F1 scores for each category\n",
     "food_f1 = evaluate(predictions, \"Food\")\n",
     "water_f1 = evaluate(predictions, \"Water\")\n",
     "energy_f1 = evaluate(predictions, \"Energy\")\n",
     "medical_f1 = evaluate(predictions, \"Medical\")\n",
-    "none_f1 = evaluate(predictions, \"None\")"
+    "none_f1 = evaluate(predictions, \"None\")\n"
    ]
   },
   {
@@ -481,8 +480,8 @@
     }
    ],
    "source": [
-    "average_f1 = (food_f1 + water_f1 + energy_f1 + medical_f1 + none_f1)/5\n",
-    "print(\"Average F1: \", average_f1)"
+    "average_f1 = (food_f1 + water_f1 + energy_f1 + medical_f1 + none_f1) / 5\n",
+    "print(\"Average F1: \", average_f1)\n"
    ]
   },
   {
@@ -564,11 +563,11 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lib.show_confusion_matrix(predictions)"
+    "lib.show_confusion_matrix(predictions)\n"
    ]
   },
   {
@@ -4530,21 +4529,12 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lib.show_predictions(predictions)"
+    "lib.show_predictions(predictions)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
