--- a/filled/lesson3_naivebayes_exercises.ipynb
+++ b/filled/lesson3_naivebayes_exercises.ipynb
@@ -111,7 +111,7 @@
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
-    "authors = {\"Harry Potter\": \"J.K. Rowling\", \"The Casual Vacancy\": \"J.K. Rowling\", \n",
+    "authors = {\"Harry Potter\": \"J.K. Rowling\", \"The Casual Vacancy\": \"J.K. Rowling\",\n",
     "           \"The Hunger Games\": \"Suzanne Collins\", \"Never Let Me Go\": \"Kazuo Ishiguro\",\n",
     "           \"The Catcher in the Rye\": \"J.D. Salinger\"}\n",
     "\n",
@@ -182,9 +182,9 @@
     }
    ],
    "source": [
-    "letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', \n",
-    "           'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+    "import string\n",
     "\n",
+    "letters = list(string.ascii_lowercase)\n",
     "\n",
     "# Exercise 2(a).\n",
     "# Create an empty dictionary called alphabet and using the above letters list, \n",
@@ -202,13 +202,13 @@
     "pos = 1\n",
     "alphabet = dict()\n",
     "for letter in letters:\n",
-    "  alphabet[letter] = pos\n",
-    "  pos += 1\n",
+    "    alphabet[letter] = pos\n",
+    "    pos += 1\n",
     "\n",
     "print(alphabet)\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
-    "    \n",
+    "\n",
     "# Exercise 2(b) (optional, advanced).\n",
     "# Take a look a the enumerate function (https://docs.python.org/2/library/functions.html#enumerate) and use this\n",
     "# function instead of manually incrementing the pos variable.\n",
@@ -285,7 +285,7 @@
     "for fruit in fruit_basket:\n",
     "    if fruit not in fruit_counts:\n",
     "        fruit_counts[fruit] = 0\n",
-    "    fruit_counts[fruit] +=1\n",
+    "    fruit_counts[fruit] += 1\n",
     "\n",
     "print(fruit_counts)\n",
     "\n",
@@ -343,18 +343,18 @@
     "# Re-implement the program from Exercise 3 using a counter object.\n",
     "\n",
     "from collections import Counter\n",
+    "\n",
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "fruit_counts = Counter()\n",
     "for fruit in fruit_basket:\n",
-    "    fruit_counts[fruit] +=1\n",
+    "    fruit_counts[fruit] += 1\n",
     "\n",
     "print(fruit_counts)\n",
     "\n",
-    "#### YOUR CODE ENDS HERE ####\n",
-    "\n"
+    "#### YOUR CODE ENDS HERE ####\n"
    ]
   },
   {
@@ -393,6 +393,7 @@
     "# Re-implment the program from Exercise 3 without using a for loop.\n",
     "\n",
     "from collections import Counter\n",
+    "\n",
     "fruit_basket = [\"apple\", \"banana\", \"plum\", \"apple\", \"apricot\", \"plum\", \"apple\", \"apple\", \"apricot\", \"apricot\"]\n",
     "\n",
     "#### YOUR CODE STARTS HERE ####\n",
@@ -510,7 +511,7 @@
     "#### YOUR CODE ENDS HERE ####\n",
     "\n",
     "print(\"Testing: fraction of cats = %.1f\" % fractions[\"cat\"])\n",
-    "print(\"CORRECT\" if fractions[\"cat\"] ==.4 else \"INCORRECT\")"
+    "print(\"CORRECT\" if fractions[\"cat\"] == .4 else \"INCORRECT\")\n"
    ]
   },
   {
@@ -549,8 +550,7 @@
     "print(Counter(box1))\n",
     "print(Counter(box2))\n",
     "\n",
-    "#### YOUR CODE ENDS HERE ####\n",
-    "\n"
+    "#### YOUR CODE ENDS HERE ####\n"
    ]
   },
   {
@@ -582,14 +582,11 @@
     "n_box1 = sum(p_box1.values()) * 1.0\n",
     "n_box2 = sum(p_box2.values()) * 1.0\n",
     "\n",
-    "\n",
     "for color in p_box1:\n",
     "    p_box1[color] /= n_box1\n",
     "\n",
     "for color in p_box2:\n",
-    "    p_box2[color] /= n_box2\n",
-    "\n",
-    "\n"
+    "    p_box2[color] /= n_box2\n"
    ]
   },
   {
@@ -628,26 +625,21 @@
     }
    ],
    "source": [
-    "\n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
     "\n",
     "def likeliest_box(color):\n",
-    "    \n",
-    "    \n",
     "    # The probability that someone picked a ball from box 1 or from box 2\n",
     "    # If we set both of these to 0.5, then this means that a box was chosen completely at random\n",
     "    # Modify these values to see how the likelihood of the two boxes changes.\n",
     "    prior_box1 = 0.5\n",
     "    prior_box2 = 0.5\n",
-    "    \n",
     "\n",
     "    # P(box1 | color) is proportional to P(color | box1) * P(box1)\n",
     "    # Hint use the prior_box1 variable and the p_box1 counter from the cell above.\n",
     "    p_box1_color = p_box1[color] * prior_box1\n",
     "    p_box2_color = p_box2[color] * prior_box2\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Which of the two boxes is likelier? Complete the following if statement\n",
     "    # such that likely_box is assigned Box 1 if the ball came most likely form Box 1\n",
     "    # and Box 2 if it most likely came from the other box.\n",
@@ -655,11 +647,10 @@
     "        likely_box = \"Box 1\"\n",
     "    else:\n",
     "        likely_box = \"Box 2\"\n",
-    "        \n",
+    "\n",
     "    return likely_box\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
-    "\n",
     "\n",
     "\n",
     "print(\"Balls in Box 1:\")\n",
@@ -726,36 +717,31 @@
     "\n",
     "\n",
     "def likeliest_box(colors):\n",
-    "    \n",
-    "    \n",
     "    # The probability that someone picked a ball from box 1 or from box 2\n",
     "    # If we set both of these to 0.5, then this means that a box was chosen completely at random\n",
     "    # Modify these values to see how the likelihood of the two boxes changes.\n",
     "    prior_box1 = 0.5\n",
     "    prior_box2 = 0.5\n",
-    "    \n",
     "\n",
     "    # P(box1 | color1, color2, color3, ...) is proportional to \n",
     "    #      P(box1) * P(color1 | box1)  * P(color2 | box1) * P(color3 | box1) * ...\n",
     "    # Hint use the prior_box1 variable and the p_box1 counter from above.\n",
     "    p_box1_colors = prior_box1\n",
     "    p_box2_colors = prior_box2\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    for color in colors:\n",
     "        p_box1_colors *= p_box1[color]\n",
     "        p_box2_colors *= p_box2[color]\n",
-    "        \n",
+    "\n",
     "    # Which of the two boxes is likelier? Complete the following if statement.\n",
     "    if p_box1_colors > p_box2_colors:\n",
     "        likely_box = \"Box 1\"\n",
     "    else:\n",
     "        likely_box = \"Box 2\"\n",
-    "        \n",
+    "\n",
     "    return likely_box\n",
     "\n",
     "#### YOUR CODE ENDS HERE ####\n",
-    "\n",
     "\n",
     "\n",
     "print(\"Balls in Box 1:\")\n",
@@ -766,12 +752,12 @@
     "print(\"\")\n",
     "\n",
     "sequences = [[\"red\"], [\"green\"], [\"blue\"], [\"yellow\"], [\"orange\"],\n",
-    "            [\"red\", \"red\", \"green\"],\n",
-    "            [\"red\", \"green\", \"green\"],\n",
-    "            [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
-    "            [\"yellow\", \"orange\"],\n",
-    "            [\"yellow\", \"green\"],\n",
-    "            [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
+    "             [\"red\", \"red\", \"green\"],\n",
+    "             [\"red\", \"green\", \"green\"],\n",
+    "             [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
+    "             [\"yellow\", \"orange\"],\n",
+    "             [\"yellow\", \"green\"],\n",
+    "             [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
     "\n",
     "for seq in sequences:\n",
     "    print(\"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq)))\n"
@@ -826,11 +812,10 @@
     "\n",
     "number_of_boxes = 4\n",
     "\n",
-    "boxes = lib.get_box_contents(n_boxes = number_of_boxes)\n",
+    "boxes = lib.get_box_contents(n_boxes=number_of_boxes)\n",
     "\n",
     "for i, box in enumerate(boxes):\n",
     "    print(\"Box %d has %d balls.\" % (i + 1, len(box)))\n",
-    "    \n",
     "    \n",
     "#### YOUR CODE STARTS HERE ####\n",
     "\n",
@@ -850,35 +835,34 @@
     "\n",
     "\n",
     "def likeliest_box(colors):\n",
-    "\n",
     "    #### YOUR CODE STARTS HERE ####\n",
     "\n",
     "    priors = []\n",
     "    for box in boxes:\n",
     "        priors.append(1.0 / len(boxes))\n",
-    "    \n",
+    "\n",
     "    scores = []\n",
     "    for i, box in enumerate(boxes):\n",
-    "        score = priors[i]    \n",
+    "        score = priors[i]\n",
     "        for color in colors:\n",
     "            score *= p_box[i][color]\n",
-    "        \n",
+    "\n",
     "        scores.append(score)\n",
-    "    \n",
+    "\n",
     "    likeliest_box = argmax(scores) + 1\n",
-    "    \n",
+    "\n",
     "    return \"Box %d\" % likeliest_box\n",
-    "  \n",
+    "\n",
     "    #### YOUR CODE ENDS HERE ####\n",
     "\n",
     "\n",
     "sequences = [[\"red\"], [\"green\"], [\"blue\"], [\"yellow\"], [\"orange\"],\n",
-    "            [\"red\", \"red\", \"green\"],\n",
-    "            [\"red\", \"green\", \"green\"],\n",
-    "            [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
-    "            [\"yellow\", \"orange\"],\n",
-    "            [\"yellow\", \"green\"],\n",
-    "            [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
+    "             [\"red\", \"red\", \"green\"],\n",
+    "             [\"red\", \"green\", \"green\"],\n",
+    "             [\"blue\", \"red\", \"green\", \"yellow\", \"blue\", \"yellow\", \"yellow\"],\n",
+    "             [\"yellow\", \"orange\"],\n",
+    "             [\"yellow\", \"green\"],\n",
+    "             [\"yellow\", \"green\", \"green\", \"green\", \"green\"]]\n",
     "\n",
     "for seq in sequences:\n",
     "    print(\"The sequence %s most likely came from %s\" % (\", \".join(seq), likeliest_box(seq)))\n"
