--- a/filled/lesson5_naivebayes.ipynb
+++ b/filled/lesson5_naivebayes.ipynb
@@ -91,57 +91,47 @@
     "        prob_c: the prior probability of category c\n",
     "        token_probs: a Counter mapping each token to P(token|category c)\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    # Step 1: Calculate the total number of tweets\n",
     "    num_tweets = len(tweets)\n",
     "\n",
-    "    \n",
     "    # Step 2: Calculate the number of tweets that are about category c.\n",
     "    # Save the answer to a variable called num_tweets_about_c.\n",
     "    # Remember c is a string, and you can get the category of a tweet via tweet.category\n",
-    "    num_tweets_about_c = len([t for t in tweets if t.category==c])\n",
+    "    num_tweets_about_c = len([t for t in tweets if t.category == c])\n",
     "\n",
-    "    \n",
-    "    \n",
     "    # Step 3: Calculate the probability of category c using the answers from Steps 1 and 2.\n",
     "    # Hint: be careful when you divide two integers!\n",
-    "    prob_c = float(num_tweets_about_c)/num_tweets\n",
-    "    \n",
-    "    \n",
+    "    prob_c = float(num_tweets_about_c) / num_tweets\n",
+    "\n",
     "    # Step 4: Create an empty Counter called token_counts.\n",
     "    # (We will use it to map each token to the number of category-c tweets containing that token.)\n",
     "    token_counts = Counter()\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Step 5 (tricky): Use a for-loop to iterate over the list of tweets.\n",
     "    # Use an if-statement to check whether the tweet is in category c.\n",
     "    # If it is, iterate over the tokens of the tweet (which you can access via tweet.tokenSet) using a for-loop.\n",
     "    # For each token, increment its count in token_counts.\n",
     "    for tweet in tweets:\n",
-    "        if tweet.category==c:\n",
+    "        if tweet.category == c:\n",
     "            for token in tweet.tokenSet:\n",
     "                token_counts[token] += 1\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Step 6: Create an empty Counter called token_probs.\n",
     "    # (We will use it to map each token to P(token | category c), \n",
     "    # i.e. the fraction of all category-c tweets that contain the token)\n",
     "    token_probs = Counter()\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    # Step 7: Now fill token_probs.\n",
     "    # For each token->count in token_counts, you want to add token->fraction to token_probs.\n",
     "    # Use a for-loop over token_counts. \n",
     "    # Remember that when you iterate over a dictionary/Counter, you access the keys.\n",
     "    # You'll need to use the variable num_tweets_about_c.\n",
     "    # Be careful when you divide integers!\n",
-    "    for token,count in token_counts.items():\n",
-    "        token_probs[token] = float(count)/num_tweets_about_c\n",
+    "    for token, count in token_counts.items():\n",
+    "        token_probs[token] = float(count) / num_tweets_about_c\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    print(\"Class %s has prior probability %.2f\" % (c, prob_c))    \n",
+    "    print(\"Class %s has prior probability %.2f\" % (c, prob_c))\n",
     "    return prob_c, token_probs\n",
     "\n",
     "\n",
@@ -149,7 +139,7 @@
     "prob_water, token_probs_water = calc_probs(tweets, \"Water\")\n",
     "prob_energy, token_probs_energy = calc_probs(tweets, \"Energy\")\n",
     "prob_medical, token_probs_medical = calc_probs(tweets, \"Medical\")\n",
-    "prob_none, token_probs_none = calc_probs(tweets, \"None\")"
+    "prob_none, token_probs_none = calc_probs(tweets, \"None\")\n"
    ]
   },
   {
@@ -179,26 +169,19 @@
     "        prob_c: the prior probability of category c\n",
     "        token_probs: a Counter mapping each token to P(token|category c)\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    ##### YOUR CODE STARTS HERE ####\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    ##### YOUR CODE ENDS HERE ####\n",
-    "            \n",
+    "\n",
     "    print(\"Class %s has prior probability %.2f\" % (c, prob_c))\n",
-    "    \n",
+    "\n",
     "    ##### OPTIONAL EXERCISE STARTS HERE ####\n",
-    "    \n",
+    "\n",
     "    # Write some code to nicely-print the top most common tokens for this category.\n",
     "    # Note that token_probs.most_common(10) gives you the 10 most common tokens in the counter,\n",
     "    # as a list of (token, probability) pairs. This is another convenient feature of Counters!\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    ##### OPTIONAL EXERCISE ENDS HERE ####\n",
     "\n",
     "    return prob_c, token_probs\n",
@@ -208,7 +191,7 @@
     "prob_water, token_probs_water = calc_probs(tweets, \"Water\")\n",
     "prob_energy, token_probs_energy = calc_probs(tweets, \"Energy\")\n",
     "prob_medical, token_probs_medical = calc_probs(tweets, \"Medical\")\n",
-    "prob_none, token_probs_none = calc_probs(tweets, \"None\")"
+    "prob_none, token_probs_none = calc_probs(tweets, \"None\")\n"
    ]
   },
   {
@@ -297,9 +280,11 @@
    "source": [
     "# For each category c, print out the tokens that maximize P(c|token)\n",
     "\n",
-    "token_probs = {'Food': token_probs_food, 'Water': token_probs_water, 'Energy': token_probs_energy, 'Medical': token_probs_medical,'None': token_probs_none}\n",
-    "prior_probs = {'Food': prob_food, 'Water': prob_water, 'Energy': prob_energy, 'Medical': prob_medical, 'None': prob_none}\n",
-    "lib.most_discriminative(tweets, token_probs, prior_probs)"
+    "token_probs = {'Food': token_probs_food, 'Water': token_probs_water, 'Energy': token_probs_energy,\n",
+    "               'Medical': token_probs_medical, 'None': token_probs_none}\n",
+    "prior_probs = {'Food': prob_food, 'Water': prob_water, 'Energy': prob_energy, 'Medical': prob_medical,\n",
+    "               'None': prob_none}\n",
+    "lib.most_discriminative(tweets, token_probs, prior_probs)\n"
    ]
   },
   {
@@ -348,19 +333,19 @@
     "    \"\"\"\n",
     "\n",
     "    ##### YOUR CODE STARTS HERE #####\n",
-    "    \n",
+    "\n",
     "    # Hint: first set posterior to prob_c, then use a for-loop over tweet.tokenSet\n",
     "    # to repeatedly multiply posterior by P(token|c)\n",
-    "        \n",
+    "\n",
     "    posterior = prob_c\n",
     "    for token in tweet.tokenSet:\n",
-    "        if token_probs[token]==0:\n",
+    "        if token_probs[token] == 0:\n",
     "            posterior *= 0.001\n",
     "        else:\n",
     "            posterior *= token_probs[token]\n",
-    "        \n",
+    "\n",
     "    ##### YOUR CODE ENDS HERE #####\n",
-    "    \n",
+    "\n",
     "    return posterior\n",
     "\n",
     "\n",
@@ -371,7 +356,7 @@
     "# Can you see what went wrong? How might you fix it?\n",
     "\n",
     "riverdale_tweet = lib.Tweet(\"No power in Riverdale\", \"Energy\", \"need\")\n",
-    "print(\"P(Energy|'No power in Riverdale') = \", get_posterior_prob(riverdale_tweet, prob_energy, token_probs_energy))"
+    "print(\"P(Energy|'No power in Riverdale') = \", get_posterior_prob(riverdale_tweet, prob_energy, token_probs_energy))\n"
    ]
   },
   {
@@ -405,8 +390,11 @@
     "    posterior_energy_prob = get_posterior_prob(tweet, prob_energy, token_probs_energy)\n",
     "    posterior_medical_prob = get_posterior_prob(tweet, prob_medical, token_probs_medical)\n",
     "    posterior_none_prob = get_posterior_prob(tweet, prob_none, token_probs_none)\n",
-    "    \n",
-    "    max_posterior = max([posterior_food_prob, posterior_water_prob, posterior_energy_prob, posterior_medical_prob, posterior_none_prob])\n",
+    "\n",
+    "    max_posterior = max(\n",
+    "        [posterior_food_prob, posterior_water_prob, posterior_energy_prob,\n",
+    "         posterior_medical_prob, posterior_none_prob]\n",
+    "    )\n",
     "    if posterior_food_prob == max_posterior:\n",
     "        return 'Food'\n",
     "    elif posterior_water_prob == max_posterior:\n",
@@ -416,7 +404,7 @@
     "    elif posterior_medical_prob == max_posterior:\n",
     "        return 'Medical'\n",
     "    else:\n",
-    "        return 'None'"
+    "        return 'None'\n"
    ]
   },
   {
@@ -4385,14 +4373,14 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compare true labels and predicted labels in a table\n",
     "\n",
-    "predictions = [(tweet, classify_nb(tweet)) for tweet in test_tweets] # a list of (tweet, prediction) pairs\n",
-    "lib.show_predictions(predictions)"
+    "predictions = [(tweet, classify_nb(tweet)) for tweet in test_tweets]  # a list of (tweet, prediction) pairs\n",
+    "lib.show_predictions(predictions)\n"
    ]
   },
   {
@@ -4438,8 +4426,8 @@
    "source": [
     "# Get average F1 score for the test set\n",
     "\n",
-    "predictions = [(tweet, classify_nb(tweet)) for tweet in test_tweets] # maps each test tweet to its predicted label\n",
-    "lib.evaluate(predictions)"
+    "predictions = [(tweet, classify_nb(tweet)) for tweet in test_tweets]  # maps each test tweet to its predicted label\n",
+    "lib.evaluate(predictions)\n"
    ]
   },
   {
@@ -4486,8 +4474,9 @@
     "# Get average F1 score for the TRAINING set.\n",
     "# Compare with average F1 for test set above. What's the reason for the difference?\n",
     "\n",
-    "trainset_predictions = [(tweet, classify_nb(tweet)) for tweet in tweets] # maps each training tweet to its predicted label\n",
-    "lib.evaluate(trainset_predictions)"
+    "trainset_predictions = [(tweet, classify_nb(tweet)) for tweet in\n",
+    "                        tweets]  # maps each training tweet to its predicted label\n",
+    "lib.evaluate(trainset_predictions)\n"
    ]
   },
   {
@@ -4558,11 +4547,11 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lib.show_confusion_matrix(predictions)"
+    "lib.show_confusion_matrix(predictions)\n"
    ]
   },
   {
