--- a/filled/lesson6_visualization.ipynb
+++ b/filled/lesson6_visualization.ipynb
@@ -83,22 +83,22 @@
     "\n",
     "    ##### YOUR CODE STARTS HERE #####\n",
     "\n",
-    "    tweet.bigramList = [(tweet.tokenList[i], tweet.tokenList[i+1]) for i in range(len(tweet.tokenList)-1)]\n",
-    "    \n",
+    "    tweet.bigramList = [(tweet.tokenList[i], tweet.tokenList[i + 1]) for i in range(len(tweet.tokenList) - 1)]\n",
+    "\n",
     "    ##### YOUR CODE ENDS HERE #####\n",
     "\n",
     "\n",
     "tweets, test_tweets = lib.read_data()\n",
-    "for tweet in tweets+test_tweets:\n",
+    "for tweet in tweets + test_tweets:\n",
     "    add_bigrams(tweet)\n",
     "print(\"Checking if bigrams are correct...\")\n",
-    "for tweet in tweets+test_tweets:\n",
-    "    assert tweet._bigramList==tweet.bigramList, \"Error in your implementation of the bigram list!\"\n",
+    "for tweet in tweets + test_tweets:\n",
+    "    assert tweet._bigramList == tweet.bigramList, \"Error in your implementation of the bigram list!\"\n",
     "print(\"Bigrams are correct.\\n\")\n",
     "\n",
     "prior_probs, token_probs = lib.learn_nb(tweets)\n",
     "predictions = [(tweet, lib.classify_nb(tweet, prior_probs, token_probs)) for tweet in test_tweets]\n",
-    "lib.evaluate(predictions)"
+    "lib.evaluate(predictions)\n"
    ]
   },
   {
@@ -152,7 +152,7 @@
     "tweets, test_tweets = lib.read_data()\n",
     "prior_probs, token_probs = lib.learn_nb(tweets)\n",
     "predictions = [(tweet, lib.classify_nb(tweet, prior_probs, token_probs)) for tweet in test_tweets]\n",
-    "lib.evaluate(predictions)"
+    "lib.evaluate(predictions)\n"
    ]
   },
   {
@@ -243,7 +243,7 @@
     }
    ],
    "source": [
-    "lib.most_discriminative(tweets, token_probs, prior_probs)"
+    "lib.most_discriminative(tweets, token_probs, prior_probs)\n"
    ]
   },
   {
@@ -328,11 +328,11 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lib.show_confusion_matrix(predictions)"
+    "lib.show_confusion_matrix(predictions)\n"
    ]
   },
   {
@@ -394,7 +394,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -402,7 +402,7 @@
     "# Hover your mouse over the words!\n",
     "\n",
     "random_tweet = random.choice(test_tweets)\n",
-    "lib.visualize_tweet(random_tweet, prior_probs, token_probs)"
+    "lib.visualize_tweet(random_tweet, prior_probs, token_probs)\n"
    ]
   },
   {
@@ -460,13 +460,13 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "my_tweet = \"I urgently need some bottled water.\"\n",
     "\n",
-    "lib.visualize_tweet(lib.Tweet(my_tweet, \"?\", \"\"), prior_probs, token_probs)"
+    "lib.visualize_tweet(lib.Tweet(my_tweet, \"?\", \"\"), prior_probs, token_probs)\n"
    ]
   },
   {
