--- a/filled/lesson4_languagemodel.ipynb
+++ b/filled/lesson4_languagemodel.ipynb
@@ -23,7 +23,7 @@
     "from nltk import bigrams, trigrams\n",
     "from nltk.corpus import reuters, movie_reviews, shakespeare\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
-    "from collections import Counter, defaultdict"
+    "from collections import Counter, defaultdict\n"
    ]
   },
   {
@@ -37,18 +37,17 @@
     "# Choose a corpus: reuters, movie_reviews or shakespeare\n",
     "corpus = movie_reviews\n",
     "\n",
-    "\n",
-    "if corpus==shakespeare:\n",
+    "if corpus == shakespeare:\n",
     "    shakespeare_text = ''.join([''.join(corpus.xml(fileid).itertext()) for fileid in corpus.fileids()])\n",
     "    words = word_tokenize(shakespeare_text)\n",
     "    sents = [word_tokenize(sent) for sent in sent_tokenize(shakespeare_text)]\n",
-    "else:    \n",
+    "else:\n",
     "    words = corpus.words()\n",
     "    sents = corpus.sents()\n",
     "\n",
     "# Lowercase everything\n",
     "words = [w.lower() for w in words]\n",
-    "sents = [[w.lower() for w in sent] for sent in sents]"
+    "sents = [[w.lower() for w in sent] for sent in sents]\n"
    ]
   },
   {
@@ -95,13 +94,12 @@
     "# Step 2: Get the total number of words and assign it to \"total_count\"\n",
     "total_count = len(words)\n",
     "\n",
-    "\n",
     "print(\"Total number of words in corpus: \", total_count)\n",
     "\n",
     "# Print 10 most common words\n",
     "print(\"\\nTop 10 most common words: \")\n",
     "for (word, count) in unigram_counts.most_common(n=10):\n",
-    "    print(word, count)"
+    "    print(word, count)\n"
    ]
   },
   {
@@ -139,13 +137,11 @@
     "# Step 1: create an empty Counter called unigram_probs.\n",
     "unigram_probs = Counter()\n",
     "\n",
-    "\n",
     "# Step 2: using a for-loop over unigram_counts, (this will iterate over the keys i.e. words)\n",
     "# calculate the appropriate fraction, and add the word -> fraction pair to unigram_probs.\n",
     "# Remember about integer division!\n",
     "for word in unigram_counts:\n",
     "    unigram_probs[word] = unigram_counts[word] / float(total_count)\n",
-    "\n",
     "\n",
     "# Check the probabilities add up to 1\n",
     "print(\"Probabilities sum to: \", sum(unigram_probs.values()))\n",
@@ -153,7 +149,7 @@
     "# Print 10 most common words\n",
     "print(\"\\nTop 10 most common words: \")\n",
     "for (word, count) in unigram_probs.most_common(n=10):\n",
-    "    print(word, \"%.5f\"%count)"
+    "    print(word, \"%.5f\" % count)\n"
    ]
   },
   {
@@ -171,7 +167,7 @@
    ],
    "source": [
     "# Print the probability of word \"the\", then try some other words.\n",
-    "print(unigram_probs['the'])"
+    "print(unigram_probs['the'])\n"
    ]
   },
   {
@@ -191,11 +187,11 @@
     "# Generate 100 words of language using the unigram model.\n",
     "# Run this cell several times!\n",
     "\n",
-    "text = [] # will be a list of generated words\n",
+    "text = []  # will be a list of generated words\n",
     "\n",
     "for _ in range(100):\n",
-    "    r = random.random() # random number in [0,1]\n",
-    "    \n",
+    "    r = random.random()  # random number in [0,1]\n",
+    "\n",
     "    # Find the word whose \"interval\" contains r\n",
     "    accumulator = .0\n",
     "    for word, freq in unigram_probs.items():\n",
@@ -204,7 +200,7 @@
     "            text.append(word)\n",
     "            break\n",
     "\n",
-    "print(' '.join(text))"
+    "print(' '.join(text))\n"
    ]
   },
   {
@@ -231,7 +227,7 @@
     "\n",
     "for sentence in sents:\n",
     "    for w1, w2 in bigrams(sentence, pad_right=True, pad_left=True):\n",
-    "        bigram_counts[w1][w2] += 1"
+    "        bigram_counts[w1][w2] += 1\n"
    ]
   },
   {
@@ -249,7 +245,7 @@
    ],
    "source": [
     "# Print how often the bigram \"of the\" occurs. Try some other words following \"of\".\n",
-    "print(bigram_counts['of']['the'])"
+    "print(bigram_counts['of']['the'])\n"
    ]
   },
   {
@@ -264,7 +260,7 @@
     "bigram_probs = defaultdict(lambda: Counter())\n",
     "for w1 in bigram_counts:\n",
     "    total_count = float(sum(bigram_counts[w1].values()))\n",
-    "    bigram_probs[w1] = Counter({w2: c/total_count for w2,c in bigram_counts[w1].items()})"
+    "    bigram_probs[w1] = Counter({w2: c / total_count for w2, c in bigram_counts[w1].items()})\n"
    ]
   },
   {
@@ -282,7 +278,7 @@
    ],
    "source": [
     "# Print the probability that 'the' follows 'of'\n",
-    "print(bigram_probs['of']['the'])"
+    "print(bigram_probs['of']['the'])\n"
    ]
   },
   {
@@ -311,8 +307,8 @@
     "# Print the top ten tokens most likely to follow 'fair', along with their probabilities.\n",
     "# Try some other words.\n",
     "prob_dist = bigram_probs['fair']\n",
-    "for word,prob in prob_dist.most_common(10):\n",
-    "    print(word,\"%.5f\"%prob)"
+    "for word, prob in prob_dist.most_common(10):\n",
+    "    print(word, \"%.5f\" % prob)\n"
    ]
   },
   {
@@ -332,19 +328,19 @@
     "# Generate text with bigram model.\n",
     "# Run this cell several times!\n",
     "\n",
-    "text = [None] # You can put your own starting word in here\n",
+    "text = [None]  # You can put your own starting word in here\n",
     "sentence_finished = False\n",
     "\n",
     "# Generate words until a None is generated\n",
     "while not sentence_finished:\n",
-    "    r = random.random() # random number in [0,1]\n",
+    "    r = random.random()  # random number in [0,1]\n",
     "    accumulator = .0\n",
     "    latest_token = text[-1]\n",
-    "    prob_dist = bigram_probs[latest_token] # prob dist of what token comes next\n",
-    "    \n",
+    "    prob_dist = bigram_probs[latest_token]  # prob dist of what token comes next\n",
+    "\n",
     "    # Find the word whose \"interval\" contains the random number r.\n",
-    "    for word,p in prob_dist.items():\n",
-    "        accumulator += p \n",
+    "    for word, p in prob_dist.items():\n",
+    "        accumulator += p\n",
     "        if accumulator >= r:\n",
     "            text.append(word)\n",
     "            break\n",
@@ -352,7 +348,7 @@
     "    if text[-1] == None:\n",
     "        sentence_finished = True\n",
     "\n",
-    "print(' '.join([t for t in text if t]))"
+    "print(' '.join([t for t in text if t]))\n"
    ]
   },
   {
@@ -381,7 +377,7 @@
     "\n",
     "for sentence in sents:\n",
     "    for w1, w2, w3 in trigrams(sentence, pad_right=True, pad_left=True):\n",
-    "        trigram_counts[(w1, w2)][w3] += 1"
+    "        trigram_counts[(w1, w2)][w3] += 1\n"
    ]
   },
   {
@@ -399,7 +395,7 @@
    ],
    "source": [
     "# Print how often the trigram \"I am not\" occurs. Try some other trigrams.\n",
-    "print(trigram_counts[('i', 'am')]['not'])"
+    "print(trigram_counts[('i', 'am')]['not'])\n"
    ]
   },
   {
@@ -414,7 +410,7 @@
     "trigram_probs = defaultdict(lambda: Counter())\n",
     "for w1_w2 in trigram_counts:\n",
     "    total_count = float(sum(trigram_counts[w1_w2].values()))\n",
-    "    trigram_probs[w1_w2] = Counter({w3: c/total_count for w3,c in trigram_counts[w1_w2].items()})"
+    "    trigram_probs[w1_w2] = Counter({w3: c / total_count for w3, c in trigram_counts[w1_w2].items()})\n"
    ]
   },
   {
@@ -432,7 +428,7 @@
    ],
    "source": [
     "# Print the probability that 'not' follows 'i am'. Try some other combinations.\n",
-    "print(trigram_probs[('i', 'am')]['not'])"
+    "print(trigram_probs[('i', 'am')]['not'])\n"
    ]
   },
   {
@@ -461,8 +457,8 @@
     "# Print the top ten tokens most likely to follow 'i am', along with their probabilities.\n",
     "# Try some other pairs of words.\n",
     "prob_dist = trigram_probs[('i', 'am')]\n",
-    "for word,prob in prob_dist.most_common(10):\n",
-    "    print(word,\"%.5f\"%prob)"
+    "for word, prob in prob_dist.most_common(10):\n",
+    "    print(word, \"%.5f\" % prob)\n"
    ]
   },
   {
@@ -482,7 +478,7 @@
     "# Generate text with trigram model.\n",
     "# Run this cell several times!\n",
     "\n",
-    "text = [None, None] # You can put your own first two words in here\n",
+    "text = [None, None]  # You can put your own first two words in here\n",
     "\n",
     "sentence_finished = False\n",
     "\n",
@@ -491,10 +487,10 @@
     "    r = random.random()\n",
     "    accumulator = .0\n",
     "    latest_bigram = tuple(text[-2:])\n",
-    "    prob_dist = trigram_probs[latest_bigram] # prob dist of what token comes next\n",
-    "    \n",
-    "    for word,p in prob_dist.items():\n",
-    "        accumulator += p \n",
+    "    prob_dist = trigram_probs[latest_bigram]  # prob dist of what token comes next\n",
+    "\n",
+    "    for word, p in prob_dist.items():\n",
+    "        accumulator += p\n",
     "        if accumulator >= r:\n",
     "            text.append(word)\n",
     "            break\n",
@@ -502,7 +498,7 @@
     "    if text[-2:] == [None, None]:\n",
     "        sentence_finished = True\n",
     "\n",
-    "print(' '.join([t for t in text if t]))"
+    "print(' '.join([t for t in text if t]))\n"
    ]
   },
   {
